--- a/index.html
+++ b/index.html
@@ -1,6 +1,65 @@
+<!-- https://www.digitalocean.com/community/tutorials/how-to-use-the-javascript-fetch-api-to-get-data -->
+<DOCTYPE html></DOCTYPE>
 <!-- 
     Buttons
     1. Authorize
+    > Base URL
+    > Client ID
+    > API Key
     2. get folders
     3. get images
+
+    client functions
+    1. getClientSecret
+    2. 
+
+    server functions
+    1. receive oauth request, send back token
+    2. receive folder request, send back folders
+    3. receive image request, send back images
  -->
+ <html lang="en">
+     <head>
+         <meta charset="utf-8">
+         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+         <meta name="viewport" content="width=device-width, initial-scale=1">
+         <meta name="description" content="Templafy Content Connector">
+         <meta name="author" content="Sam Polgar">
+         <title>Templafy Content Connector Test</title>
+     </head>
+
+     <body>
+         <div class="container">
+             <div class="col-md-7 col-lg-8">
+                 <h4 class="mb3">Authorize</h4>
+                 <form>
+                    <div class="form-group mx-sm-3 mb-2">
+                        <div class="form-group row">
+                            <label for="inputBaseURL" class="sr-only">Base URL</label>
+                            <input type="text" class="form-control" id="inputBaseURL" placeholder="Base URL">
+                        </div>
+                        <div class="form-group row">
+                            <label for="clientId" class="sr-only">Client Id</label>
+                            <input type="text" class="form-control" id="clientId" placeholder="Client Id">
+                        </div>
+                        <div class="form-group row">
+                            <label for="inputPassword" class="sr-only">Password</label>
+                            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                        </div>
+                    </div>
+                    <button type="submit" id="authBtn" class="btn btn-primary mb-2">Authorize</button>
+                  </form>
+             </div>
+         </div>
+     </body>
+ </html>
+
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- <script>
+    $("#authBtn").click(function(){
+        //getOauth2Token()
+//   alert("Text: " + $("#test").text());
+}); -->
+</script>
