add promises to api calls

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- https://www.digitalocean.com/community/tutorials/how-to-use-the-javascript-fetch-api-to-get-data -->
 <DOCTYPE html></DOCTYPE>
 <!-- 
     Buttons
@@ -17,6 +16,11 @@
     1. receive oauth request, send back token
     2. receive folder request, send back folders
     3. receive image request, send back images
+
+    Resources
+    https://www.geeksforgeeks.org/javascript-promises/
+    https://www.digitalocean.com/community/tutorials/how-to-use-the-javascript-fetch-api-to-get-data
+    https://masteringjs.io/tutorials/express/post
  -->
  <html lang="en">
      <head>
